# iMonnitTwilioConnector

./: .gitignore  README.md  compose.yml  dataTypes.py  db.py  requirements.txt  server.py  settings.py  twilioClient.py
app/: Dockerfile  requirements.txt
db/: dbConfig.cnf  dbInit.sql
iMonnitTwilioConnector/: Dockerfile  db.py  requirements.txt  settings.py  twilioClient.py  webhook.py
proxy/: customCmd.sh
proxy/nginx/model/: proxyConfig.conf
server/: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  startServer.sh
server/iMonnitTwilioConnector/: __init__.py  auth.py  dataTypes.py  settings.py  twilioClient.py  webhook.py
tests/: README.md
